fix: align arrows

--- a/src/latest-landing/home/News/Vlog/Vlog.scss
+++ b/src/latest-landing/home/News/Vlog/Vlog.scss
@@ -37,7 +37,7 @@
     }
 
     .v_pagination {
-        padding-right: 100px;
+        padding-right: 150px;
     }
 
     &__row {
